Resource tracking and spending

--- a/build-win10/GameLab/GameLab.vcxproj.filters
+++ b/build-win10/GameLab/GameLab.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="..\..\source\Response.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\DeckNode.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\main.cpp">
@@ -99,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\Response.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\DeckNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
