--- a/build-win10/GameLab/GameLab.vcxproj
+++ b/build-win10/GameLab/GameLab.vcxproj
@@ -187,6 +187,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\source\Card.h" />
     <ClInclude Include="..\..\source\Deck.h" />
+    <ClInclude Include="..\..\source\DeckNode.h" />
     <ClInclude Include="..\..\source\GLApp.h" />
     <ClInclude Include="..\..\source\GLCollisionController.h" />
     <ClInclude Include="..\..\source\GLGameScene.h" />
@@ -203,6 +204,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\source\Card.cpp" />
     <ClCompile Include="..\..\source\Deck.cpp" />
+    <ClCompile Include="..\..\source\DeckNode.cpp" />
     <ClCompile Include="..\..\source\GLApp.cpp" />
     <ClCompile Include="..\..\source\GLCollisionController.cpp" />
     <ClCompile Include="..\..\source\GLGameScene.cpp" />
