--- a/build-win10/GameLab/GameLab.vcxproj.filters
+++ b/build-win10/GameLab/GameLab.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\..\source\LoadingScene.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\EnemyFight.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\source\Deck.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\LoadingScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\EnemyFight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\Card.cpp">
