--- a/build-apple/DireDeal.xcodeproj/xcshareddata/xcschemes/DireDealiOS.xcscheme
+++ b/build-apple/DireDeal.xcodeproj/xcshareddata/xcschemes/DireDealiOS.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1240"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -74,5 +74,23 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
+      <PostActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "LOGFILE=&quot;${ARCHIVE_PATH}/static-frameworks.log&quot;&#10;echo &quot;Removing static frameworks from ${WRAPPER_NAME} archive&quot; &gt; $LOGFILE&#10;find &quot;${ARCHIVE_PRODUCTS_PATH}/Applications/${WRAPPER_NAME}&quot; -name &apos;*.framework&apos; -print0 | while IFS= read -r -d &apos;&apos; fm; do&#10;    name=$(basename &quot;${fm}&quot; .framework)&#10;    target=&quot;${fm}/${name}&quot;&#10;    echo &quot;Checking: ${fm}&quot; &gt;&gt; $LOGFILE&#10;    if file &quot;${target}&quot; | grep -q &quot;current ar archive&quot;; then&#10;        rm -rf &quot;${fm}&quot;&#10;        echo &quot;Removed static framework: ${fm}&quot; &gt;&gt; $LOGFILE&#10;    fi&#10;done&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
+                     BuildableName = "DireDealiOS.app"
+                     BlueprintName = "DireDeal (iOS)"
+                     ReferencedContainer = "container:DireDeal.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PostActions>
    </ArchiveAction>
 </Scheme>
